--- a/app/templates/map/cbt_modal.html
+++ b/app/templates/map/cbt_modal.html
@@ -3,10 +3,10 @@
         <script type="text/javascript">
         
         function roundMinutes(date) {
-                    date.setMinutes(date.getSeconds() + Math.round(date.getSeconds()/60));
-                    date.setHours(date.getHours() + Math.round(date.getMinutes()/60));
-                    date.setMinutes(0);
-                    date.setSeconds(0);
+                    date.setUTCMinutes(date.getUTCMinutes() + Math.round(date.getUTCSeconds()/60));
+                    date.setUTCHours(date.getUTCHours() + Math.round(date.getUTCMinutes()/60));
+                    date.setUTCMinutes(0);
+                    date.setUTCSeconds(0);
                     return date;
                 }
             
