--- a/app/static/dash/hydrograph.css
+++ b/app/static/dash/hydrograph.css
@@ -5,7 +5,6 @@
 }
 
 
-
 .oq {
 		fill: grey;
 		opacity: .5;
@@ -19,8 +18,6 @@
 			
 }
 
-
-
 .hidden {
   stroke: none;
 }
@@ -31,21 +28,23 @@
 }
 
 line.tool-tip-visible{
-    stroke: black;
-    stroke-width: .5;
+    stroke: #000000;
+    stroke-width: 2;
+    stroke-dasharray: 3,3;
+    opacity: 1;
 }
 
 
 .legend {
-				
-				width: 10px;
-				height: 10px;
-				float: left;
-				vertical-align: bottom;
-				bottom: 0;
-				font-family: sans-serif;
-				font-size: 15px;
-				line-height: 18px;
+		
+	width: 10px;
+	height: 10px;
+	float: left;
+	vertical-align: bottom;
+	bottom: 0;
+	font-family: sans-serif;
+	font-size: 15px;
+	line-height: 18px;
     				
 }
 
@@ -65,3 +64,9 @@ line.tool-tip-visible{
 		background-color: grey;	
 		opacity: .5;
 }
+
+
+
+
+
+
