--- a/app/templates/dash/dash.html
+++ b/app/templates/dash/dash.html
@@ -4,22 +4,8 @@
 <script src="/static/d3.js"></script>
 <link rel="stylesheet" href="/static/dash/hydrograph.css"> 
 <script type="text/javascript">
-           function roundDay(date) {
-                    date.setUTCMinutes(date.getMinutes() + Math.round(date.getUTCSeconds()/60));
-                    date.setUTCHours(date.getUTCHours() + Math.round(date.getUTCMinutes()/60));
-                    if(Math.round(date.getUTCHours()/24)==1){
-                        day = 1;
-                    }else{
-                        day = 0;
-                    }
-                    date.setUTCDate(date.getUTCDate()+day);  
-                    date.setUTCMinutes(0);
-                    date.setUTCSeconds(0);
-                    date.setUTCMilliseconds(0);
-                    date.setUTCHours(7);
-                    return date;
-                }
-            
+           
+            bisectDate = d3.bisector(function(d) { return d.date; }).left;
             var parseTime = d3.timeParse("%Y-%m-%d");
     		var rowConverter = function(d, parseTime){
             		return{"value":parseFloat(d["value"]), "date":parseTime(d["date"])}
@@ -243,17 +229,19 @@
                
              //tooltip
     		var gToolTip = svg.insert('g', '.listener-rect')
+            		.attr('clip-path', 'url(#clip)')
                     .attr('class', 'tooltip-group');
+             
+            tooltipLine = gToolTip.append("line")
+                    .attr('clip-path', 'url(#clip)');
                     
-        	var tooltipLine = gToolTip.append("line")
-				   .attr("stroke", "none");
-    		
+        	
     				
     		//add the listner group and rect for all mouse events
     		var gListener = svg.append('g')
                     	.attr('class', 'listener-group')
                     	.attr('clip-path', 'url(#clip)');
-                    	
+                   	
                     	
                     	
              var listenerRect = gListener
@@ -266,35 +254,29 @@
                           .style('opacity', 0)
                           .on("mousemove", function () {
                             //x's and y's for tooltips
-                            cx = d3.mouse(this)[0];
-                            cy = d3.mouse(this)[1];
-                           console.log(xAxisScale.invert(cx),roundDay(xAxisScale.invert(cx)) )
-                        //update line
-                            tooltipLine.attr("class", "tool-tip-visible")
-                                .attr("x1", cx)
-                                .attr("x2", cx)
+                            mouse_x = d3.mouse(this)[0];
+                            mouse_y = d3.mouse(this)[1];
+                           var x0 = xAxisScale.invert(mouse_x)
+                              i = bisectDate(oqHighLow, x0, 1)
+                              
+                              d0 = oqHighLow[i - 1]
+                              d1 = oqHighLow[i]
+                              d = x0 - d0.year > d1.year - x0 ? d1 : d0;
+                          
+    
+                          
+                          tooltipLine.attr("class", "tool-tip-visible")
+                                .attr("x1", mouse_x)
+                                .attr("x2", mouse_x)
                                 .attr("y1", -height)
-                                .attr("y2", height) 
-                        
-                        //show data
-                            d3.select('.tooltipdata#date') 
-                                .classed("hidden", false);
-                            d3.select('.tooltipdata#fbvalue') 
-                                .classed("hidden", false);
-                            d3.select('.tooltipdata#twvalue') 
-                                .classed("hidden", false);
-                                
-                                
+                                .attr("y2", height)
+                             
                         })
                         .on("mouseout", function () {
                             tooltipLine.attr("class", "tool-tip-invisible");
-                            d3.select('.tooltipdata#date') 
-                                .classed("hidden", true);
-                            d3.select('.tooltipdata#fbvalue') 
-                                .classed("hidden", true);
-                            d3.select('.tooltipdata#twvalue') 
-                                .classed("hidden", true);
+                            
                         });
+                    
                     	
             }
     			
