exponential smoothing added

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
 {% block scripts %}
 	{{ super() }}
 		<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-		
+		<link rel="stylesheet" href="/static/base.css"> 
 {% endblock %}
 {% block navbar %}
     <nav class="navbar navbar-default">
